<resources>
    <string name="app_name">My Application</string>
    <string name="button">Refresh</string>
    <string name="Up">Forward</string>
    <string name="disconnect">Disconnect</string>
    <string name="down">Backward</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="go">Go Draw</string>
    <string name="clear">Clear Canvas</string>
</resources>